[gd_scene load_steps=4 format=2]

[ext_resource path="res://LeaderBoardStat.tscn" type="PackedScene" id=1]
[ext_resource path="res://WorldTheme.tres" type="Theme" id=2]
[ext_resource path="res://LeaderBoardItem.gd" type="Script" id=3]

[node name="LeaderBoardItem" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1619.0
margin_bottom = -825.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
name_of_player = "Player Name"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 357.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 357.0
margin_bottom = 23.0

[node name="Standing" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 30.0
margin_bottom = 23.0
rect_min_size = Vector2( 30, 0 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "0"

[node name="Name" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 34.0
margin_right = 150.0
margin_bottom = 23.0
theme = ExtResource( 2 )
text = "Player Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 27.0
margin_right = 357.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="Candies" parent="VBoxContainer/VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 72.0
margin_bottom = 50.0
stat_label_text = "Candies"

[node name="NudeLogos" parent="VBoxContainer/VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 92.0
margin_right = 196.0
margin_bottom = 50.0
stat_label_text = "Nude Logos"

[node name="JamesonAssists" parent="VBoxContainer/VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 216.0
margin_right = 357.0
margin_bottom = 50.0
stat_label_text = "Jameson Assist"
